@@ -12,7 +12,9 @@ package org.elasticsearch.monitor.os;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.Constants;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.unit.Processors;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.PathUtils;
 import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.monitor.Probes;
@@ -30,6 +32,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.OptionalLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
@@ -72,6 +75,7 @@ public class OsProbe {
     private static final Method getTotalSwapSpaceSize;
     private static final Method getSystemLoadAverage;
     private static final Method getSystemCpuLoad;
+    private static final Method getAvailableProcessors;
 
     static {
         getFreePhysicalMemorySize = getMethod("getFreePhysicalMemorySize");
@@ -80,6 +84,7 @@ public class OsProbe {
         getTotalSwapSpaceSize = getMethod("getTotalSwapSpaceSize");
         getSystemLoadAverage = getMethod("getSystemLoadAverage");
         getSystemCpuLoad = getMethod("getSystemCpuLoad");
+        getAvailableProcessors = getMethod("getAvailableProcessors");
     }
 
     /**
@@ -101,6 +106,47 @@ public class OsProbe {
             logger.warn("exception retrieving free physical memory", e);
             return 0;
         }
+    }
+
+    /**
+     * Returns the amount of actual free physical memory in bytes.
+     * <p>
+     * This method accounts for memory that can be reclaimed under pressure, reading {@code MemAvailable} from {@code /proc/meminfo}
+     * when available, or otherwise falling back to {@code MemFree + Buffers + Cached}.
+     * When {@code /proc/meminfo} can't be read or parsed, this falls back to {@link #getFreePhysicalMemorySize()}.
+     */
+    public long getActualFreePhysicalMemorySize() {
+        if (Constants.LINUX == false) {
+            return getFreePhysicalMemorySize();
+        }
+        try {
+            List<String> meminfoLines = readProcMeminfo();
+            long available = parseMeminfoKbToBytes(meminfoLines, "MemAvailable:");
+            if (available >= 0) {
+                return available;
+            }
+            long free = parseMeminfoKbToBytes(meminfoLines, "MemFree:");
+            long buffers = parseMeminfoKbToBytes(meminfoLines, "Buffers:");
+            long cached = parseMeminfoKbToBytes(meminfoLines, "Cached:");
+            if (free >= 0 && buffers >= 0 && cached >= 0) {
+                return free + buffers + cached;
+            }
+        } catch (Exception e) {
+            logger.warn("exception retrieving actual free physical memory", e);
+        }
+        return getFreePhysicalMemorySize();
+    }
+
+    private static long parseMeminfoKbToBytes(List<String> meminfoLines, String prefix) {
+        for (String line : meminfoLines) {
+            if (line.startsWith(prefix) == false) {
+                continue;
+            }
+            int end = line.lastIndexOf(" kB");
+            String number = line.substring(prefix.length(), end).trim();
+            return Long.parseLong(number) * 1024;
+        }
+        return -1;
     }
 
     /**
@@ -259,17 +305,44 @@ public class OsProbe {
         return Probes.getLoadAndScaleToPercent(getSystemCpuLoad, osMxBean);
     }
 
+    public static int getAvailableProcessors() {
+        if (getAvailableProcessors == null) {
+            logger.warn("getAvailableProcessors is not available");
+            return 0;
+        }
+        try {
+            int availableProcessors = (int) getAvailableProcessors.invoke(osMxBean);
+            if (availableProcessors <= 0) {
+                logger.debug("OS reported a non-positive number of available processors [{}]", availableProcessors);
+                return 0;
+            }
+            return availableProcessors;
+        } catch (Exception e) {
+            logger.warn("exception retrieving available processors", e);
+            return 0;
+        }
+    }
+
     /**
      * Reads a file containing a single line.
      *
      * @param path path to the file to read
      * @return the single line
      * @throws IOException if an I/O exception occurs reading the file
+     * @throws IllegalStateException if the file contains zero lines
      */
-    private static String readSingleLine(final Path path) throws IOException {
+    static String readSingleLine(final Path path) throws IOException {
         final List<String> lines = Files.readAllLines(path);
+        if (lines.isEmpty()) {
+            throw new IllegalStateException(Strings.format("File %s is empty, exactly one line was expected", path));
+        }
         assert lines.size() == 1 : String.join("\n", lines);
-        return lines.get(0);
+        return lines.getFirst();
+    }
+
+    @Nullable
+    private static String maybeSingleLine(final List<String> lines) {
+        return lines.size() == 1 ? lines.getFirst() : null;
     }
 
     // this property is to support a hack to workaround an issue with Docker containers mounting the cgroups hierarchy inconsistently with
@@ -359,21 +432,26 @@ public class OsProbe {
         return readSingleLine(PathUtils.get("/sys/fs/cgroup/cpuacct", controlGroup, "cpuacct.usage"));
     }
 
+    @Nullable
     private long[] getCgroupV2CpuLimit(String controlGroup) throws IOException {
-        String entry = readCgroupV2CpuLimit(controlGroup);
+        final var entry = maybeSingleLine(readCgroupV2CpuLimit(controlGroup));
+        if (entry == null) {
+            return null;
+        }
         String[] parts = entry.split("\\s+");
-        assert parts.length == 2 : "Expected 2 fields in [cpu.max]";
+        if (parts.length != 2) {
+            return null;
+        }
 
         long[] values = new long[2];
-
         values[0] = "max".equals(parts[0]) ? -1L : Long.parseLong(parts[0]);
         values[1] = Long.parseLong(parts[1]);
         return values;
     }
 
     @SuppressForbidden(reason = "access /sys/fs/cgroup/cpu.max")
-    String readCgroupV2CpuLimit(String controlGroup) throws IOException {
-        return readSingleLine(PathUtils.get("/sys/fs/cgroup/", controlGroup, "cpu.max"));
+    List<String> readCgroupV2CpuLimit(String controlGroup) throws IOException {
+        return Files.readAllLines(PathUtils.get("/sys/fs/cgroup/", controlGroup, "cpu.max"));
     }
 
     /**
@@ -707,6 +785,10 @@ public class OsProbe {
                 cgroupCpuAcctUsageNanos = cpuStatsMap.get("usage_usec").multiply(THOUSAND); // convert from micros to nanos
 
                 long[] cpuLimits = getCgroupV2CpuLimit(cpuControlGroup);
+                if (cpuLimits == null) {
+                    logger.debug("no cpu_quota and cpu_period data found in cpu.max");
+                    return null;
+                }
                 cgroupCpuAcctCpuCfsQuotaMicros = cpuLimits[0];
                 cgroupCpuAcctCpuCfsPeriodMicros = cpuLimits[1];
 
@@ -774,6 +856,31 @@ public class OsProbe {
     }
 
     private static final Logger logger = LogManager.getLogger(OsProbe.class);
+
+    public OptionalLong getCgroupMemoryUsageInBytes() {
+        OsStats.Cgroup cgroup = getCgroup(Constants.LINUX);
+        return cgroup == null ? OptionalLong.empty() : parseCgroupBytes(cgroup.getMemoryUsageInBytes());
+    }
+
+    public OptionalLong getCgroupMemoryLimitInBytes() {
+        OsStats.Cgroup cgroup = getCgroup(Constants.LINUX);
+        return cgroup == null ? OptionalLong.empty() : parseCgroupBytes(cgroup.getMemoryLimitInBytes());
+    }
+
+    private static OptionalLong parseCgroupBytes(String value) {
+        if (value == null || "max".equals(value)) {
+            return OptionalLong.empty();
+        }
+        try {
+            BigInteger bigInt = new BigInteger(value);
+            if (bigInt.signum() < 0) {
+                return OptionalLong.empty();
+            }
+            return OptionalLong.of(bigInt.longValueExact());
+        } catch (NumberFormatException | ArithmeticException e) {
+            return OptionalLong.empty();
+        }
+    }
 
     OsInfo osInfo(long refreshInterval, Processors processors) throws IOException {
         return new OsInfo(
@@ -855,6 +962,9 @@ public class OsProbe {
     @SuppressForbidden(reason = "access /proc/meminfo")
     List<String> readProcMeminfo() throws IOException {
         final List<String> lines;
+        if (Constants.LINUX == false) {
+            return Collections.emptyList();
+        }
         if (Files.exists(PathUtils.get("/proc/meminfo"))) {
             lines = Files.readAllLines(PathUtils.get("/proc/meminfo"));
             assert lines != null && lines.isEmpty() == false;
@@ -869,28 +979,7 @@ public class OsProbe {
      */
     long getTotalMemFromProcMeminfo() throws IOException {
         List<String> meminfoLines = readProcMeminfo();
-        final List<String> memTotalLines = meminfoLines.stream().filter(line -> line.startsWith("MemTotal")).toList();
-        assert memTotalLines.size() <= 1 : memTotalLines;
-        if (memTotalLines.size() == 1) {
-            final String memTotalLine = memTotalLines.get(0);
-            int beginIdx = memTotalLine.indexOf("MemTotal:");
-            int endIdx = memTotalLine.lastIndexOf(" kB");
-            if (beginIdx + 9 < endIdx) {
-                final String memTotalString = memTotalLine.substring(beginIdx + 9, endIdx).trim();
-                try {
-                    long memTotalInKb = Long.parseLong(memTotalString);
-                    return memTotalInKb * 1024;
-                } catch (NumberFormatException e) {
-                    logger.warn("Unable to retrieve total memory from meminfo line [" + memTotalLine + "]");
-                    return 0;
-                }
-            } else {
-                logger.warn("Unable to retrieve total memory from meminfo line [" + memTotalLine + "]");
-                return 0;
-            }
-        } else {
-            return 0;
-        }
+        return Math.max(0, parseMeminfoKbToBytes(meminfoLines, "MemTotal:"));
     }
 
     boolean isDebian8() throws IOException {
@@ -902,7 +991,7 @@ public class OsProbe {
     }
 
     public OsStats osStats() {
-        final OsStats.Cpu cpu = new OsStats.Cpu(getSystemCpuPercent(), getSystemLoadAverage());
+        final OsStats.Cpu cpu = new OsStats.Cpu(getSystemCpuPercent(), getSystemLoadAverage(), getAvailableProcessors());
         final OsStats.Mem mem = new OsStats.Mem(getTotalPhysicalMemorySize(), getAdjustedTotalMemorySize(), getFreePhysicalMemorySize());
         final OsStats.Swap swap = new OsStats.Swap(getTotalSwapSpaceSize(), getFreeSwapSpaceSize());
         final OsStats.Cgroup cgroup = getCgroup(Constants.LINUX);
